src/modules/dashboard/components/ColonyHome/ColonyMembers/ColonyMembers.css
.main {
  display: block;
  margin-top: 25px;
}

.userAvatars {
  max-width: 130px;
}

.userAvatar {
  display: inline-block;
  margin: 0 15px 15px 0;
  border-radius: 50px;
}

.userAvatar:nth-child(3n + 0) {
  margin-right: 0px;
}

.userAvatar:nth-child(13),
.userAvatar:nth-child(14),
.userAvatar:nth-child(15) {
  margin-bottom: 0px;
}

.userAvatar:hover {
  border-color: var(--primary);
  box-shadow: 0px 4px 27px color-mod(var(--temp-grey-8) alpha(25%));
}

.remaningAvatars {
  display: inline-block;
  margin: 0;
  vertical-align: top;
}

.remaningAvatars > a {
  display: inline-block;
  padding-top: 6px;
  height: 30px;
  width: 30px;
  border-radius: 50px;
  background-color: var(--colony-white);
  font-size: var(--size-tiny);
  text-align: center;
  color: var(--temp-grey-blue-7);
  letter-spacing: var(--spacing-medium);
}

.remaningAvatars:hover > a {
  background-color: color-mod(var(--action-secondary) alpha(12%));
  color: var(--action-secondary);
}

.loadingText {
  display: inline-block;
  margin: -8px 0 0 5px;
  vertical-align: middle;
  font-size: var(--size-small);
  letter-spacing: initial;
}

.userBanned {
  /*
   * @NOTE There's a lot of negative spacing required to make this render properly
   */
  display: block;
  margin: -12px -4px -8px 0;
  position: relative;
  float: right;
}

.tooltip {
  width: 170px;
}

.heading {
  display: flex;
  align-items: center;
  gap: 8px;
}

.heading > span + span,
.heading > span:last-child {
  margin-left: 4px;
}

.heading > span:first-child {
  margin-left: 0;
}

.inviteButton {
  margin-bottom: 20px;
}

